--- a/www/AIPWE.Rmd
+++ b/www/AIPWE.Rmd
@@ -1,10 +1,9 @@
- ---
-title: "Doubly Robust Augmented Inverse Probability Weighted Estimator"
-output: html_document
----
+
+## Doubly Robust Augmented Inverse Probability Weighted Estimator
+
 In this section, we introduce a doubly-robust method for estimating optimal treatment regimes, called Augmented Inverse Probability Weighted Estimator (AIPWE).This estimator incorporate both [inverse probability weighted estimator](potentially put the server link to it) and [outcome regression estimator](Outcome_Regression.html). Both outcome regression estimator and the inverse probability weighted estimator obtain consistency only if models involved are correctly specified. Augmenting the inverse probability weighted estimator with the outcome regression estimator, Augment Inverse Probability Weighted Estimator alleviate the possible confounding concern and increase precision. It is a consistent estimator as long as either the outcome regression model or the propensity score model is correctly specified, which introduces the doubly-robustness property.
 
-We quickly review the same setting of the outcome regression method described in last section. In a single-stage clinical trial or observational study, we have $n$ subjects sampled from the patient population of interests. The treatment $A$ has options $\{ 0, 1\}$ (or $\{ -1, 1\}$).The patient characteristics vector collected before the treatment assignment is denoted by $X$, where $X\in \mathbf{R}^p$. $Y$ denotes the observed outcome of interest, and is preferred to be higher value. Then, the observed data, written as $(Y_i, A_i, X_i)$, $i = 1, \cdots, n$, are independent and identically distributed across i. The two potential outcomes are denoted by $\{ Y^*(0), Y^*(1)\}$. The treatment regime is a function $g$ that maps the domain of $X$ to $\{0, 1\}$ (or $\{-1, 1\}$). We define the potential outcome under an arbitrary regime $g$ as $Y^*(g) = Y^*(1) g(X) + Y^*(0)\left\{ 1 - g(X) \right\}$. Under the three necessary assumptions mentioned before [ADD LINKS TO THE ASSUMPTIONS HERE], we have that $Q(X,a) \triangleq E\left(Y \mid X=X, A=a\right) = E\{ Y^{*}(a) \mid X=X\}$ , for $a \in \{0, 1 \}$ ( or $\{-1, 1 \}$). Therefore, the optimal regime is defined as $g^{opt}(X) = \mathbf{I}\{Q(X, 1) > Q(X, 0) \},$ where treatment 0 is chosen if both treatment options give the same outcome value. As the Q-functions are usually unknown, we can posit a regression model for $Q(X,a) = E(Y \mid X, a)$ with finite-dimensinal parameter $\beta$. The class of regimes defined by this modeling is denoted by $\mathcal{G}_{\beta} = \{g_{\beta}: g_{\beta} \triangleq g(X, \beta) = \mathbf{I}\{Q(X, 1, \beta) > Q(X, 0, \beta), \beta \in \mathbf{R}^p\}$. If the model is correctly specified, then we have $Q(X, A) = Q(X, A; \beta_0)$, and the  true optimal regime is $g^{opt}(X, \beta_0) = \mathbf{I} \{ Q(X, 1; \beta_0) > Q(X, 0; \beta_0)\}$. We estimate the parameter $\beta$ with some proper method, and denote the obtained estimator by $\widehat{\beta}$. Consequently, we have an estimator of the optimal regime based on outcome regression method as $\widehat{g}^{opt}(X, \widehat{\beta}) = \mathbf{I}\{ Q(X, 1; \widehat{\beta}) > Q(X, 0; \widehat{\beta}) \}$. Moreover, an estimator of the overall mean outcome under the optimal regime, $E\left\{ Y^{*}\left( g^{opt}\right) \right\}$, named outcome regression estimator, is formalized as
+We quickly review the same setting of the outcome regression method described in last section. In a single-stage clinical trial or observational study, we have $n$ subjects sampled from the patient population of interests. The treatment $A$ has options $\{ 0, 1\}$ (or $\{ -1, 1\}$).The patient characteristics vector collected before the treatment assignment is denoted by $X$, where $X\in \mathbf{R}^p$. $Y$ denotes the observed outcome of interest, and is preferred to be higher value. Then, the observed data, written as $(Y_i, A_i, X_i)$, $i = 1, \cdots, n$, are independent and identically distributed across i. The two potential outcomes are denoted by $\{ Y^*(0), Y^*(1)\}$. The treatment regime is a function $g$ that maps the domain of $X$ to $\{0, 1\}$ (or $\{-1, 1\}$). We define the potential outcome under an arbitrary regime $g$ as $Y^*(g) = Y^*(1) g(X) + Y^*(0)\left\{ 1 - g(X) \right\}$. Under the three necessary assumptions mentioned before [ADD LINKS TO THE ASSUMPTIONS HERE], we have that $Q(X,a) \triangleq E\left(Y \mid X=X, A=a\right) = E\{ Y^{*}(a) \mid X=X\}$ , for $a \in \{0, 1 \}$ ( or $\{-1, 1 \}$). Therefore, the optimal regime is defined as $g^{opt}(X) = \mathbf{I}\{Q(X, 1) > Q(X, 0) \},$ where treatment 0 is chosen if both treatment options give the same outcome value. As the Q-functions are usually unknown, we can posit a regression model for $Q(X,a) = E(Y \mid X, a)$ with finite-dimensional parameter $\beta$. The class of regimes defined by this modeling is denoted by $\mathcal{G}_{\beta} = \{g_{\beta}: g_{\beta} \triangleq g(X, \beta) = \mathbf{I}\{Q(X, 1, \beta) > Q(X, 0, \beta), \beta \in \mathbf{R}^p\}$. If the model is correctly specified, then we have $Q(X, A) = Q(X, A; \beta_0)$, and the  true optimal regime is $g^{opt}(X, \beta_0) = \mathbf{I} \{ Q(X, 1; \beta_0) > Q(X, 0; \beta_0)\}$. We estimate the parameter $\beta$ with some proper method, and denote the obtained estimator by $\widehat{\beta}$. Consequently, we have an estimator of the optimal regime based on outcome regression method as $\widehat{g}^{opt}(X, \widehat{\beta}) = \mathbf{I}\{ Q(X, 1; \widehat{\beta}) > Q(X, 0; \widehat{\beta}) \}$. Moreover, an estimator of the overall mean outcome under the optimal regime, $E\left\{ Y^{*}\left( g^{opt}\right) \right\}$, named outcome regression estimator, is formalized as
 
 $$n^{-1}\sum_{i=1}^{n} \underset{a \in \{0, 1\}}{\text{max}} Q( X_i, a; \widehat{\beta}).$$
 
