--- a/www/background/effect_1.Rmd
+++ b/www/background/effect_1.Rmd
@@ -1,5 +1,5 @@
 ## Causal Effect
-A question  clinicians often ask is whether a treatment causes changes in a response of interest, or what is the **causal effect** of treatment on the response of interest. For instance, assume that we have carefully designed an exercise plan. We would like to know if following our exercise plan for three months causes reduced Body Mass Index (BMI). If it does, how much is the effect of the exercise plan compared to not following the plan. We give more precise definitions of causal effect below.
+A question  clinicians often ask is whether a treatment causes changes in a response of interest. If so, what is the **causal effect** of treatment on the response of interest. For instance, assume that we have carefully designed an exercise plan. We would like to know if following our exercise plan for three months causes reduced Body Mass Index (BMI). If it does, how much is the effect of the exercise plan compared to not following the plan. We give more precise definitions of causal effect below.
 
 
 #### Individual Causal Effect
@@ -12,5 +12,5 @@ Suppose for the moment that we are able to create two identical universes. In on
 The asterisk is used to denote that these measurements are **potential outcomes**. In reality, Rufus cannot receive **both** treatments, so only one of $Y^{\mbox{*}}_{A=0}$ and $Y^{\mbox{*}}_{A=1}$ can be observed.  If Rufus follows the exercise plan, we will be able to measure $Y^{\mbox{*}}_{A=1}$, and $Y^{\mbox{*}}_{A=0}$ will be "missing." Similarly, if he does not follow the plan, we will be able to measure $Y^{\mbox{*}}_{A=0}$, and $Y^{\mbox{*}}_{A=1}$ will be "missing." In general, individual causal effects are not estimable because of missing data.
 
 
-A notational convention that has been established by the field denotes the potential outcome for treatment $A=a$ as $Y^{\mbox{*}}(A=a)$ rather than  $Y^{\mbox{*}}_{A=a}$. Unfortunately, the conventional notation is often confusing for those new to the field and is misinterpreted as meaning that the potential outcome is a *function* of the treatment. To avoid this confusion in the initial introduction of potential outcomes, we opted for the non-standard notation. From this point forward, we will use the established standard. In this way, the causal effect for a binary treatment is defined as $Y^{\mbox{*}}_{A=1} - Y^{\mbox{*}}_{A=0} \equiv Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)$. 
+Another notational convention that has been established by the field denotes the potential outcome for treatment $A=a$ as $Y^{\mbox{*}}(A=a)$. Unfortunately, the conventional notation is sometimes confusing for those new to the field and is misinterpreted as meaning that the potential outcome is a *function* of the treatment. To avoid this confusion in the initial introduction of potential outcomes, we opted for the non-standard notation. From this point forward, we will use the established standard. In this way, the causal effect for a binary treatment is defined as $Y^{\mbox{*}}_{A=1} - Y^{\mbox{*}}_{A=0} \equiv Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)$. 
 
