--- a/www/background/effect_2.Rmd
+++ b/www/background/effect_2.Rmd
@@ -6,25 +6,26 @@ We have just learned that identifying individual causal effects is generally not
 Let's return to our previous example. Rufus would like to know if on average, the exercise routine reduces individual BMI. Depending on the outcome, he might reconsider his treatment selection! Rufus introduces the plan to all of his family members; five people in total. Through the multi-universe lens, we can preview everyone's potential outcomes under both treatment levels.
 
 
-| Name      |  BMI under $A=1$  |   BMI under $A=0$  |
+|&nbsp; Name &nbsp;     | &nbsp; BMI under $A=1$ &nbsp; |  &nbsp; BMI under $A=0$ &nbsp;  |
 |:---------:|:-----------------:|:------------------:|
-| Rufus     | 24                | 27                 | 
-| Linda     | 20                | 19.5               |
-| Jeff      | 35                | 32                 |
-| Paul      | 32                | 29                 |
-| Jessy     | 31                | 29                 |
+| &nbsp;Rufus &nbsp;    | &nbsp;24 &nbsp;               |&nbsp; 27   &nbsp;              | 
+| &nbsp;Linda &nbsp;    |&nbsp; 20 &nbsp;               | &nbsp;19.5  &nbsp;             |
+|&nbsp; Jeff &nbsp;     | &nbsp;35  &nbsp;              |&nbsp; 32 &nbsp;                |
+| &nbsp;Paul&nbsp;      |&nbsp; 32 &nbsp;               | &nbsp;29 &nbsp;                |
+| &nbsp;Jessy &nbsp;    | &nbsp;31&nbsp;                | &nbsp;29 &nbsp;                |
 
 
-With this information, we can calculate the average of everyone's individual causal effect, $E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\}$. Recall that the expectation of differences equals the differences of expectations, and thus 
-$$E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\} = E\left\{Y^{\mbox{*}}(A=1) \right\} - E\left\{Y^{\mbox{*}}(A=0)\right\}.$$ 
+
+With this information, we can calculate the average of everyone's individual causal effect, $E\left(Y^{\mbox{*}}_{A=1} - Y^{\mbox{*}}_{A=0}\right)$. Recall that the expectation of differences equals the differences of expectations, and thus 
+$$E\left(Y^{\mbox{*}}_{A=1} - Y^{\mbox{*}}_{A=0}\right) = E\left(Y^{\mbox{*}}_{A=1} \right) - E\left(Y^{\mbox{*}}_{A=0}\right).$$ 
 We formalize it as
-$$\delta^{\mbox{*}} = E\left\{Y^{\mbox{*}}(A=1) - Y^{\mbox{*}}(A=0)\right\} = E\left\{Y^{\mbox{*}}(A=1) \right\} - E\left\{Y^{\mbox{*}}(A=0)\right\}.$$
+$$\delta^{\mbox{*}} = E\left(Y^{\mbox{*}}_{A=1} - Y^{\mbox{*}}_{A=0}\right) = E\left(Y^{\mbox{*}}_{A=1} \right) - E\left(Y^{\mbox{*}}_{A=0}\right).$$
 
 $\delta^{\mbox{*}}$ is referred as the average causal effect of the population of interest. 
 
 If we had access to all of the potential outcomes, the average causal effect would be 
-$$E\left\{Y^{\mbox{*}}(A=1) \right\} = \frac{1}{5} \sum_{N=1}^5 Y^{\mbox{*}}(A=1) = \frac{1}{5} \left( 24 + 20+35+32+31\right) = \frac{1}{5} (142) = 28.4$$. 
-$$E\left\{Y^{\mbox{*}}(A=0) \right\} = \frac{1}{5} \sum_{N=1}^5 Y^{\mbox{*}}(A=1) = \frac{1}{5} \left( 27+19.5+32+29+29\right) = \frac{1}{5} (136.5) = 27.3.$$ 
+$$E\left(Y^{\mbox{*}}_{A=1} \right) = \frac{1}{5} \sum_{N=1}^5 Y^{\mbox{*}}_{A=1} = \frac{1}{5} \left( 24 + 20+35+32+31\right) = \frac{1}{5} (142) = 28.4$$. 
+$$E\left(Y^{\mbox{*}}_{A=0} \right) = \frac{1}{5} \sum_{N=1}^5 Y^{\mbox{*}}_{A=0} = \frac{1}{5} \left( 27+19.5+32+29+29\right) = \frac{1}{5} (136.5) = 27.3.$$ 
 Thus,
 $$\delta^{\mbox{*}} = 28.4 - 27.3 = 1.1.$$ Our exercise plan is not as effective as we had hoped!
 
